--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "twit": "^2.2.11",
     "typescript": "4.9.3"
   }
 }
